ompi/mpi/f03/mpi.f03


integer(C_INT) function &
MPI_File_iread_shared(fh, buf, count, datatype, request, ierr) &
  BIND(C, name="MPI_File_iread_shared")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_File_iread_shared

end interface MPI_File_iread_shared


interface MPI_File_iwrite

integer(C_INT) function &
MPI_File_iwrite(fh, buf, count, datatype, request, ierr) &
  BIND(C, name="MPI_File_iwrite")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_File_iwrite

end interface MPI_File_iwrite


interface MPI_File_iwrite_at

integer(C_INT) function &
MPI_File_iwrite_at(fh, offset, buf, count, datatype, request, ierr) &
  BIND(C, name="MPI_File_iwrite_at")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_File_iwrite_at

end interface MPI_File_iwrite_at


interface MPI_File_iwrite_shared

integer(C_INT) function &
MPI_File_iwrite_shared(fh, buf, count, datatype, request, ierr) &
  BIND(C, name="MPI_File_iwrite_shared")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_File_iwrite_shared

end interface MPI_File_iwrite_shared


interface MPI_File_open

integer(C_INT) function &
MPI_File_open(comm, filename, amode, info, fh, ierr) &
  BIND(C, name="MPI_File_open")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  character(len=*), value, intent(in) :: filename
  integer(INT_C), value, intent(in) :: amode
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  integer(MPI_HANDLE_KIND), value, intent(out) :: fh
end function MPI_File_open

end interface MPI_File_open


interface MPI_File_preallocate

integer(C_INT) function &
MPI_File_preallocate(fh, size, ierr) &
  BIND(C, name="MPI_File_preallocate")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: size
end function MPI_File_preallocate

end interface MPI_File_preallocate


interface MPI_File_read

integer(C_INT) function &
MPI_File_read(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_read")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read

end interface MPI_File_read


interface MPI_File_read_all

integer(C_INT) function &
MPI_File_read_all(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_read_all")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_all

end interface MPI_File_read_all


interface MPI_File_read_all_begin

integer(C_INT) function &
MPI_File_read_all_begin(fh, buf, count, datatype, ierr) &
  BIND(C, name="MPI_File_read_all_begin")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
end function MPI_File_read_all_begin

end interface MPI_File_read_all_begin


interface MPI_File_read_all_end

integer(C_INT) function &
MPI_File_read_all_end(fh, buf, status, ierr) &
  BIND(C, name="MPI_File_read_all_end")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_all_end

end interface MPI_File_read_all_end


interface MPI_File_read_at

integer(C_INT) function &
MPI_File_read_at(fh, offset, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_read_at")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_at

end interface MPI_File_read_at


interface MPI_File_read_at_all

integer(C_INT) function &
MPI_File_read_at_all(fh, offset, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_read_at_all")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_at_all

end interface MPI_File_read_at_all


interface MPI_File_read_at_all_begin

integer(C_INT) function &
MPI_File_read_at_all_begin(fh, offset, buf, count, datatype, ierr) &
  BIND(C, name="MPI_File_read_at_all_begin")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
end function MPI_File_read_at_all_begin

end interface MPI_File_read_at_all_begin


interface MPI_File_read_at_all_end

integer(C_INT) function &
MPI_File_read_at_all_end(fh, buf, status, ierr) &
  BIND(C, name="MPI_File_read_at_all_end")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_at_all_end

end interface MPI_File_read_at_all_end


interface MPI_File_read_ordered

integer(C_INT) function &
MPI_File_read_ordered(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_read_ordered")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_ordered

end interface MPI_File_read_ordered


interface MPI_File_read_ordered_begin

integer(C_INT) function &
MPI_File_read_ordered_begin(fh, buf, count, datatype, ierr) &
  BIND(C, name="MPI_File_read_ordered_begin")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
end function MPI_File_read_ordered_begin

end interface MPI_File_read_ordered_begin


interface MPI_File_read_ordered_end

integer(C_INT) function &
MPI_File_read_ordered_end(fh, buf, status, ierr) &
  BIND(C, name="MPI_File_read_ordered_end")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_ordered_end

end interface MPI_File_read_ordered_end


interface MPI_File_read_shared

integer(C_INT) function &
MPI_File_read_shared(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_read_shared")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_read_shared

end interface MPI_File_read_shared


interface MPI_File_seek

integer(C_INT) function &
MPI_File_seek(fh, offset, whence, ierr) &
  BIND(C, name="MPI_File_seek")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  integer(INT_C), value, intent(in) :: whence
end function MPI_File_seek

end interface MPI_File_seek


interface MPI_File_seek_shared

integer(C_INT) function &
MPI_File_seek_shared(fh, offset, whence, ierr) &
  BIND(C, name="MPI_File_seek_shared")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  integer(INT_C), value, intent(in) :: whence
end function MPI_File_seek_shared

end interface MPI_File_seek_shared


interface MPI_File_set_atomicity

integer(C_INT) function &
MPI_File_set_atomicity(fh, flag, ierr) &
  BIND(C, name="MPI_File_set_atomicity")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer, value, intent(in) :: flag
end function MPI_File_set_atomicity

end interface MPI_File_set_atomicity


interface MPI_File_set_errhandler

integer(C_INT) function &
MPI_File_set_errhandler(file, errhandler, ierr) &
  BIND(C, name="MPI_File_set_errhandler")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: file
  integer(MPI_HANDLE_KIND), value, intent(in) :: errhandler
end function MPI_File_set_errhandler

end interface MPI_File_set_errhandler


interface MPI_File_set_info

integer(C_INT) function &
MPI_File_set_info(fh, info, ierr) &
  BIND(C, name="MPI_File_set_info")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
end function MPI_File_set_info

end interface MPI_File_set_info


interface MPI_File_set_size

integer(C_INT) function &
MPI_File_set_size(fh, size, ierr) &
  BIND(C, name="MPI_File_set_size")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: size
end function MPI_File_set_size

end interface MPI_File_set_size


interface MPI_File_set_view

integer(C_INT) function &
MPI_File_set_view(fh, disp, etype, filetype, datarep, info, ierr) &
  BIND(C, name="MPI_File_set_view")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: disp
  integer(MPI_HANDLE_KIND), value, intent(in) :: etype
  integer(MPI_HANDLE_KIND), value, intent(in) :: filetype
  character(len=*), value, intent(in) :: datarep
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
end function MPI_File_set_view

end interface MPI_File_set_view


interface MPI_File_sync

integer(C_INT) function &
MPI_File_sync(fh, ierr) &
  BIND(C, name="MPI_File_sync")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
end function MPI_File_sync

end interface MPI_File_sync


interface MPI_File_write
